[package]
name = "nihilists"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
strum = { version = "0.24", features = ["derive"] }
rand = "0.8"
tui = "0.17"
crossterm = "0.22"
ctrlc = "3.2"
emoji = "0.2"